--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             </li>
             <li class="one">Products
                 <ul>
-                    <li>On Site Training</li>
-                    <li>Telemarketing Skills Training</li>
+                    <a href="site.html"><li>On Site Training</li></a>
+                    <a href="tele.html"><li>Telemarketing Skills Training</li></a>
                 </ul>
             </li>
             <li class="one">Contact
