--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="flexdiv">
       <div class="paradiv">
         <p>YOU WANT TO BE A BETTER SALES PERSON? OUR EXPERTISE WILL HELP YOU CLOSE MORE SALES.</p>
-        <button id="doe">ACCESS NOW</button>
+        <a href="access.html"><button id="doe">ACCESS NOW</button></a>
       </div>
       <div class="videodiv">
           <video width="400" controls>
