--- a/site.html
+++ b/site.html
@@ -13,7 +13,7 @@
             <img width="500" src="images/business.jpg" alt="">
         </div>
        <div class="listdiv">
-           <h1>Benefits of onsite training</h1>
+           <h1>Benefits of onsite training...</h1>
            <li>Everyone hears the same message.</li>
            <li>People have a shared understanding of course concepts.</li>
            <li>Examples and activities focus on the same work place.</li>
