--- a/access.html
+++ b/access.html
@@ -8,9 +8,36 @@
     <title>Access button</title>
 </head>
 <body>
-    <div id="login-form" class="login-page">
-      <div class="form-box"></div>
+    <div class="login-page">
+      <div class="form">
+        <form class="register-form">
+          <input type="text" placeholder="Full-Name" required/>
+          <input type="number" placeholder="Age" required/>
+          <input type="text" placeholder="Gender" required/>
+          <input type="number" placeholder="Phone-Number" required/>
+          <input type="text" placeholder="Email-Address" required/>
+          <input type="text" placeholder="Business" required/>
+          <input type="password" placeholder="Password" required/>
+          <button>Create</button>
+          <p class="message">Already Registered? <a href="#">Log-in</a></p>
+        </form>
+
+        <form class="login-form">
+          <input type="text" placeholder="username" required/>
+          <input type="password" placeholder="password" required/>
+          <p class="pass"><a href="#">Forgot Password?</a></p>
+          <button>login</button>
+          <p class="message">Not Registered? <a href="#">Register</a></p>
+        </form>
+
+      </div>
     </div>
     
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+      $(".message a").click(function(){
+      $("form").animate({height: "toggle", opacity: "toogle" }, "slow");
+       });
+    </script>
 </body>
 </html>
