--- a/tele.html
+++ b/tele.html
@@ -15,25 +15,25 @@
         </div>
         <div class="motherdiv1">
             <div class="first">
-                <h1>Telephone communication</h1>
+                <h1>Telephone communication.</h1>
                 <p>One of the primary duties of a telemarketer is communicating with potential clients and customers over the phone. To do this successfully, telemarketers typically develop their verbal communication skills. Knowing how to hold the customer's attention and convey accurate information to them over the phone can make your telemarketing more effective. Telemarketers can also learn basic phone etiquette to ensure that they're conversing with customers in a kind a welcoming manner.</p>
             </div>
             <div class="second">
-                <h1>Active listening</h1>
+                <h1>Active listening.</h1>
                 <p>Telemarketers practice active listening to help them engage with customers more effectively. Active listening skills can also help them understand and respond to the information that the customer tells them. Listening to and learning what a customer desires can aid telemarketers in providing information that interests them and leads them to make a purchase decision.</p>
             </div>
             <div class="third">
-                <h1>Customer service</h1>
+                <h1>Customer service.</h1>
                 <p>Customer service skills are also crucial for telemarketers. Knowing how to relate to customers and reassure them of your service may increase the customer's satisfaction and comfort level. Customer service skills include using a positive tone, adapting to the customer's needs and forming connections with customers. Building a comfortable and positive relationship with the customers that you speak to may lead to a higher rate of positive outcomes and sales.</p>
             </div>
         </div>
         <div class="motherdiv2">
             <div class="fourth">
-                <h1>Product knowledge</h1>
+                <h1>Product knowledge.</h1>
                 <p>Telemarketers often possess in-depth knowledge of the product or service that they're selling. While the amount you know about a product may vary based on the organization you work for, understanding what you're promoting can help you provide customers with accurate information, which may increase sales. It can also help you establish customer trust, which can encourage them to make future purchases.</p>
             </div>
             <div class="fifth">
-                <h1>Persuasiveness</h1>
+                <h1>Persuasiveness.</h1>
                 <p>Telemarketers are responsible for persuading customers to buy or use a company's products or services. Having skills in persuasion can help them encourage customers to listen to and consider the sales pitch. Effective persuasion often includes utilizing reasoning and appealing to the customer's needs and emotions.</p>
             </div>
         </div>
